@@ -45,7 +45,8 @@ lazy val `kyo-settings` = Seq(
     Test / testOptions += Tests.Argument("-oDG"),
     ThisBuild / versionScheme := Some("early-semver"),
     javacOptions ++= Seq("--release", "21"),
-    scalacOptions ++= Seq("-release:21")
+    scalacOptions ++= Seq("-release:21"),
+    Test / javaOptions += "--add-opens=java.base/java.lang=ALL-UNNAMED"
 )
 
 lazy val kyo =
