@@ -6,6 +6,7 @@ import java.util.concurrent.atomic.AtomicInteger
 import kyo.*
 import org.jctools.queues.MpmcUnboundedXaddArrayQueue
 import scala.annotation.tailrec
+import scala.util.control.NonFatal
 
 private[kyo] object Scheduler:
 
@@ -21,7 +22,22 @@ private[kyo] object Scheduler:
     private val concurrency      = new AtomicInteger(0)
 
     private val idle = new MpmcUnboundedXaddArrayQueue[Worker](8)
-    private val pool = Executors.newVirtualThreadPerTaskExecutor()
+
+    private val pool =
+        val v = Thread.ofVirtual()
+        try
+            val field = v.getClass().getDeclaredField("scheduler")
+            field.setAccessible(true)
+            field.set(v, Executors.newCachedThreadPool())
+        catch
+            case ex if (NonFatal(ex)) =>
+                Logs.logger.warn(
+                    "Notice: Kyo's scheduler falling back to Loom's global ForkJoinPool, which might not be optimal. " +
+                        "Enhance performance by adding '--add-opens=java.base/java.lang=ALL-UNNAMED' to JVM args for a dedicated thread pool."
+                )
+        end try
+        Executors.newCachedThreadPool(v.name("kyo-worker").factory())
+    end pool
 
     startWorkers()
 
